Download button is now content aware

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/content/import/import.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/content/import/import.html
@@ -90,7 +90,7 @@
     </div>
     <div class="col-md-3">
         <a href="{{ exportUrl }}" class="btn btn-default btn-lg">
-            <span class="glyphicon glyphicon glyphicon glyphicon-download-alt"></span> Download Zipped Registry Content
+            <span class="glyphicon glyphicon glyphicon glyphicon-download-alt"></span> {{ exportButtonText }}
         </a>
     </div>
 </div>
