--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/content/import/import.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/content/import/import.html
@@ -83,7 +83,7 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row" ng-show="{{exportTitle && exportUrl && exportButtonText}}">
 
     <div class="page-header">
         <h1>{{ exportTitle }}</h1>
