Replaces all graphics with jqplot https://bugs.eclipse.org/bugs/show_bug.cgi?id=468652

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/hits/hits.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/hits/hits.html
@@ -1,34 +1,79 @@
 <link rel="stylesheet" type="text/css" href="templates/monitoring/hits/graphics.css" />
-
 <div>
 	<h2><span class="label label-default">Hits per URI</span></h2>
 	<div id="hits-per-uri"></div>
-	<script src="templates/monitoring/hits/per_uri/graphics.js"></script>
 </div>
+<script>
+$(document).ready(function(){
+	$.get( "../acclog?hitsPerURI&series", function(series) {
+		var seriesArray = series;
+		$.get( "../acclog?hitsPerURI", function(data) {
+			var seriesModel = [];
+			seriesArray.forEach(function(nextSeries) {
+				seriesModel.push({
+					label: nextSeries,
+					showMarker:false,
+					shadow: false,
+					lineWidth: 1.5
+				});
+			});
+			var plot = $.jqplot('hits-per-uri', data, {  
+				series: seriesModel,
+			    axes:{xaxis:{label:'Time', renderer:$.jqplot.DateAxisRenderer}, yaxis:{label:'Hits'}},
+			    legend: {show: true},
+			    cursor:{show:true, zoom:true, showTooltip:false},
+			    grid: {background: '#ffffff'},
+			    seriesColors: [ "#0000ff", "#00ff00", "#ff0000", "#ffff00", "#00ffff", "#ff00ff"]
+			});
+		});
+	});
+});
+</script>
 <hr>
-<!-- # 177
 <div>
 	<h2><span class="label label-default">Hits per Project</span></h2>
 	<div id="hits-per-project"></div>
-	<script src="templates/monitoring/hits/per_project/graphics.js"></script>
 </div>
-<hr>
--->
-<div>
-	<h2><span class="label label-default">Hits per Pattern</span></h2>
-	<div id="hits-per-pattern"></div>
-	<script src="templates/monitoring/hits/per_pattern/graphics.js"></script>
-</div>
-<hr>
+<script>
+$(document).ready(function(){
+	$.get( "../acclog?hitsPerProject&series", function(series) {
+		var seriesArray = series;
+		$.get( "../acclog?hitsProjectURI", function(data) {
+			var seriesModel = [];
+			seriesArray.forEach(function(nextSeries) {
+				seriesModel.push({
+					label: nextSeries,
+					showMarker:false,
+					shadow: false,
+					lineWidth: 1.5
+				});
+			});
+			var plot = $.jqplot('hits-per-project', data, {  
+				series: seriesModel,
+			    axes:{xaxis:{label:'Time', renderer:$.jqplot.DateAxisRenderer}, yaxis:{label:'Hits'}},
+			    legend: {show: true},
+			    cursor:{show:true, zoom:true, showTooltip:false},
+			    grid: {background: '#ffffff'},
+			    seriesColors: [ "#0000ff", "#00ff00", "#ff0000", "#ffff00", "#00ffff", "#ff00ff"]
+			});
+		});
+	});
+});
+</script>
 <div>
 	<h2><span class="label label-default">Hits by URI</span></h2>
-	<div id="main">
-		<div id="sequence"></div>
-		<div id="chart">
-			<div id="explanation" style="visibility: hidden;">
-				<span id="percentage"></span><br /> of the access
-			</div>
-		</div>
-	</div>
-	<script src="templates/monitoring/hits/by_uri/graphics.js"></script>
+	<div id="hits-by-uri"></div>
 </div>
+<script>
+$(document).ready(function(){
+	$.get( "../acclog?hitsByURI&series", function(data) {
+		var plot = $.jqplot('hits-by-uri', data, {  
+		    axes:{xaxis:{label:'Time', renderer:$.jqplot.DateAxisRenderer}, yaxis:{label:'Hits'}},
+		    legend: {show: true},
+		    cursor:{show:true, zoom:true, showTooltip:false},
+		    grid: {background: '#ffffff'},
+		    seriesColors: [ "#0000ff", "#00ff00", "#ff0000", "#ffff00", "#00ffff", "#ff00ff"]
+		});
+	});
+});
+</script>
