--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/response/response.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/response/response.html
@@ -62,7 +62,7 @@ $(document).ready(function(){
 </script>
 <hr>
 <div>
-	<h2><span class="label label-default">Response Time per Project</span></h2>
+	<h2><span class="label label-default">Response Time per Pattern</span></h2>
 	<div id="response-time-per-pattern"></div>
 </div>
 <script>
