Adapted label property in templates https://bugs.eclipse.org/bugs/show_bug.cgi?id=479012

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/src/org/eclipse/dirigible/ide/template/ui/html/templates/angular/display_single_entity/ui-for-display-single-entity.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/src/org/eclipse/dirigible/ide/template/ui/html/templates/angular/display_single_entity/ui-for-display-single-entity.html
@@ -22,7 +22,7 @@
             <div ng-show="urlParameter">
                 <div ng-show="exist">
 #foreach ($tableColumn in $tableColumns) 
-                    <label>${tableColumn.getName()}</label>
+                    <label>${tableColumn.getLabel()}</label>
                     <input type="text" class="form-control" ng-model="entity.${tableColumn.getName()}" readonly>
                     <br>
 #end 
