--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/src/org/eclipse/dirigible/ide/template/ui/html/templates/angular/list/ui-for-entity-list.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/src/org/eclipse/dirigible/ide/template/ui/html/templates/angular/list/ui-for-entity-list.html
@@ -21,7 +21,7 @@
 					<tr>
 #foreach ($tableColumn in $tableColumns) 
 #if($tableColumn.isVisible())
-						<th>${tableColumn.getName()}</th>
+						<th>${tableColumn.getLabel()}</th>
 #end
 #end
 					</tr>
