Add Auto Publish Fix append of serveral path segments with one call Fix that removes Project name from public path.

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/.settings/org.eclipse.wst.common.component
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/.settings/org.eclipse.wst.common.component
@@ -4,8 +4,8 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="${project.name}-2.1.150831"/>
-        <property name="java-output-path" value="/dirigible-runtime-tomcat/target/classes"/>
         <property name="component.exclusion.patterns" value="**/*.source_*.jar"/>
+        <property name="java-output-path" value="/dirigible-runtime-tomcat/target/classes"/>
+        <property name="context-root" value="dirigible"/>
     </wb-module>
 </project-modules>
