--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/src/org/eclipse/dirigible/ide/template/ui/html/templates/angular/list_and_manage/ui-for-entity-manage.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/src/org/eclipse/dirigible/ide/template/ui/html/templates/angular/list_and_manage/ui-for-entity-manage.html
@@ -19,10 +19,10 @@
 </style>
 </head>
 <body>
-	<div id="wrap" ng-app ng-controller="ManageController">
+	<div id="wrap" ng-controller="ManageController">
 		<div class="container">
-			<div class="alert alert-danger" ng-show="errorMessage">
-				{{errorMessage}}</div>
+			<div class="alert alert-danger" ng-show="errorMessage">{{errorMessage}}</div>
+			<!-- entities table -->
 			<table class="table table-condensed">
 				<thead>
 					<tr>
@@ -46,56 +46,38 @@
 			</table>
 			<hr>
 			<br>
+			<!-- new, edit and delete buttons -->
 			<div class="btn-group">
 				<input class="btn btn-default" type="button" value="New"
 					ng-click="setOperation('new')"
-					ng-disabled="errorMessage || operation == 'update'"> <input
+					ng-disabled="errorMessage || operation == 'new' || operation == 'update'"> <input
 					class="btn btn-default" type="button" value="Edit"
 					ng-click="setOperation('update')"
-					ng-disabled="errorMessage || operation == 'new'"> <input
+					ng-disabled="errorMessage || operation == 'new' || operation == 'update'"> <input
 					class="btn btn-default" type="button" value="Delete"
 					ng-click="delete()"
 					ng-disabled="errorMessage || operation == 'new' || operation == 'update'">
 			</div>
-			<br> <br>
+			<br>
+			<br>
 			<div>
-				<div ng-show="operation == 'show'">
-#foreach ($tableColumn in $tableColumns) 
-					<label>${tableColumn.getLabel()}</label>
-					<input type="text" class="form-control"
-						ng-model="selectedEntry.${tableColumn.getName()}" readonly>
-					<br> 
-#end
-				</div>
-				<div ng-show="operation == 'new'">
+				<!-- input form -->
+				<div>
 #foreach ($tableColumn in $tableColumns)
 #if($tableColumn.isKey())
 					<label>${tableColumn.getLabel()}</label> 
-					<input type="text"
-						class="form-control" value="Auto Generated" readonly> <br>
+					<input type="text" class="form-control" 
+						ng-model="selectedEntry.${tableColumn.getName()}" readonly> <br>
 #else 
 					<label>${tableColumn.getLabel()}</label> 
 					<input type="text" class="form-control" 
-						ng-model="newEntry.${tableColumn.getName()}">
+						ng-model="selectedEntry.${tableColumn.getName()}" ng-readonly="operation == 'show'">
 					<br>
 #end
 #end
 				</div>
-				<div ng-show="operation == 'update'">
-#foreach ($tableColumn in $tableColumns) 
-#if($tableColumn.isKey())
-					<label>${tableColumn.getLabel()}</label>
-					<input type="text" class="form-control" 
-						ng-model="selectedEntry.${tableColumn.getName()}" readonly>
-					<br> 
-#else 
-					<label>${tableColumn.getLabel()}</label> 
-					<input type="text" class="form-control"
-						ng-model="selectedEntry.${tableColumn.getName()}"> 
-					<br>
-#end
-#end
-				</div>
+				
+				<!-- save and cancel buttons -->
 				<div class="btn-group">
 					<input class="btn btn-primary" type="button" value="Save" ng-show="operation == 'new' || operation == 'update'"
 						ng-click="confirmAction()"> 
@@ -106,11 +88,14 @@
 		</div>
 	</div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular-resource.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-resource.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.min.js"></script>
+	<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
 
 	<script type="text/javascript">
-		function ManageController($scope, $http){
+		angular.module('page', ['ngAnimate', 'ui.bootstrap']);
+		angular.module('page').controller('ManageController', function ($scope, $http) {
 			
 			var url = '${serviceFileName}';
 
@@ -121,7 +106,6 @@
 			
 			$scope.selectedEntry;
             $scope.operation = 'show';
-            $scope.newEntry = null;
             $scope.errorMessage = null;
 			
 			$scope.showInfoForEntry = function(entry) {
@@ -180,7 +164,7 @@
                     case 'show':
                         break;
                     case 'new':
-                        newEntry($scope.newEntry);
+                        newEntry($scope.selectedEntry);
                         break;
                     case 'update':
                         updateEntry($scope.selectedEntry);
@@ -192,27 +176,26 @@
                 refreshData();
             };
 
-           $scope.delete = function() {
-        	   if($scope.selectedEntry) {
+			$scope.delete = function() {
+        	   	if($scope.selectedEntry) {
                  	var confirmed = confirm('Do you realy want to delete the selected entry?');
 	               	if(confirmed) {
 	                   	delete $scope.selectedEntry._selected_;
 	                       deleteEntry($scope.selectedEntry);
 	                       $scope.operation = 'show';
 	               	}                    	
-               } else {
-                   alert('Please select row from the table.');
-               }
-           };
+               	} else {
+                   	alert('Please select row from the table.');
+				}
+			};
                     
 			function newEntry(entry){
-				delete $scope.newEntry._selected_;
+				delete $scope.selectedEntry._selected_;
 				$http.post(url, entry)
 				.success(function(){
 					refreshData();
 					$scope.selectedEntry = null;
                     $scope.operation = 'show';
-                    $scope.newEntry = null;
                     $scope.errorMessage = null;
 				})
 				.error(function(response){
@@ -223,14 +206,14 @@
 			function updateEntry(entry){
 				delete $scope.selectedEntry._selected_;
 				$http.put(url, entry)
-				.success(function(){
-					refreshData();
-                    $scope.operation = 'show';
-                    $scope.errorMessage = null;
-				})
-				.error(function(response){
-					$scope.errorMessage = response.err.message;
-				});
+					.success(function(){
+						refreshData();
+	                    $scope.operation = 'show';
+	                    $scope.errorMessage = null;
+					})
+					.error(function(response){
+						$scope.errorMessage = response.err.message;
+					});
 			}
 
 			function deleteEntry(entry){
@@ -256,7 +239,6 @@
 				$http.get(url)
 				.success(function(data){
 					$scope.data = data;
-                	$scope.newEntry = null;
                     $scope.selectedEntry = null;
                     $scope.operation = 'show';
                     $scope.errorMessage = null;
@@ -265,7 +247,20 @@
 					$scope.errorMessage = response.err.message;
 				});
 			}
-		}
+			
+			$scope.open = function($event) {
+				$scope.status.opened = true;
+			};
+			$scope.dateOptions = {
+				startingDay: 1
+			};
+			$scope.format = 'yyyy/MM/dd';
+			$scope.status = {
+				opened: false
+			};
+			
+		});
+		
 	</script>
 </body>
 </html>
