--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/src/org/eclipse/dirigible/ide/template/ui/html/templates/angular/list_and_manage/ui-for-entity-manage.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/src/org/eclipse/dirigible/ide/template/ui/html/templates/angular/list_and_manage/ui-for-entity-manage.html
@@ -38,7 +38,11 @@
 						ng-click="showInfoForEntry(entry)">
 #foreach ($tableColumn in $tableColumns)
 #if($tableColumn.isVisible())
-						<td>{{entry.${tableColumn.getName()}}}</td> 
+#if ($tableColumn.getWidgetType() == "date")
+						<td>{{entry.${tableColumn.getName()} | date:format}}</td>
+#else
+						<td>{{entry.${tableColumn.getName()}}}</td>
+#end
 #end
 #end
 					</tr>
@@ -64,16 +68,33 @@
 				<!-- input form -->
 				<div>
 #foreach ($tableColumn in $tableColumns)
-#if($tableColumn.isKey())
-					<label>${tableColumn.getLabel()}</label> 
+					<label>${tableColumn.getLabel()}</label>
+#if ($tableColumn.isKey())
 					<input type="text" class="form-control" 
 						ng-model="selectedEntry.${tableColumn.getName()}" readonly> <br>
-#else 
-					<label>${tableColumn.getLabel()}</label> 
+#else
+#if ($tableColumn.getWidgetType() == "date")
+
+					<p class="input-group">
+		            	<input type="text" ng-model="selectedEntry.${tableColumn.getName()}" class="form-control ng-pristine ng-valid ng-isolate-scope ng-valid-required ng-touched" 
+		               		uib-datepicker-popup="" is-open="${tableColumn.getName()}Status.opened" 
+		               		datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" 
+		               		required="required" style="" ng-readonly="operation == 'show'">
+				        <span class="input-group-btn">
+				        	<button type="button" class="btn btn-default" ng-click="${tableColumn.getName()}Open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+				        </span>
+		           	</p>
+
+#elseif ($tableColumn.getWidgetType() == "textarea")
+
+					<textarea class="form-control" 
+						ng-model="selectedEntry.${tableColumn.getName()}" cols="50" rows="5" ng-readonly="operation == 'show'"></textarea>
+#else
 					<input type="text" class="form-control" 
 						ng-model="selectedEntry.${tableColumn.getName()}" ng-readonly="operation == 'show'">
-					<br>
 #end
+#end
+					<br>
 #end
 				</div>
 				
@@ -129,6 +150,7 @@
                       switch (operation) {
                           case 'new':
                               if ($scope.operation !== 'new') {
+                            	  $scope.selectedEntry = null;
                                   $scope.operation = 'new';
                               } else {
                                   $scope.operation = 'show';
@@ -248,16 +270,23 @@
 				});
 			}
 			
-			$scope.open = function($event) {
-				$scope.status.opened = true;
-			};
 			$scope.dateOptions = {
 				startingDay: 1
 			};
-			$scope.format = 'yyyy/MM/dd';
-			$scope.status = {
+			$scope.formats = ['yyyy/MM/dd', 'dd-MMMM-yyyy', 'dd.MM.yyyy', 'shortDate'];
+  			$scope.format = $scope.formats[0];
+
+#foreach ($tableColumn in $tableColumns) 
+#if ($tableColumn.getWidgetType() == "date")
+			$scope.${tableColumn.getName()}Open = function($event) {
+				$scope.${tableColumn.getName()}Status.opened = true;
+			};
+			$scope.${tableColumn.getName()}Status = {
 				opened: false
 			};
+
+#end
+#end
 			
 		});
 		
