--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/src/org/eclipse/dirigible/ide/template/ui/html/templates/angular/list/ui-for-entity-list.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/src/org/eclipse/dirigible/ide/template/ui/html/templates/angular/list/ui-for-entity-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="page">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,8 +15,7 @@
 <body>
 	<div id="wrap">
 		<div class="container">
-			<table class="table table-condensed table-striped" ng-app
-				ng-controller="ListController">
+			<table class="table table-condensed table-striped" ng-controller="ListController">
 				<thead>
 					<tr>
 #foreach ($tableColumn in $tableColumns) 
@@ -30,7 +29,11 @@
 					<tr ng-repeat="entry in data">
 #foreach ($tableColumn in $tableColumns) 
 #if($tableColumn.isVisible())
-						<td>{{entry.${tableColumn.getName()}}}</td> 
+#if ($tableColumn.getWidgetType() == "date")
+						<td>{{entry.${tableColumn.getName()} | date:format}}</td>
+#else
+						<td>{{entry.${tableColumn.getName()}}}</td>
+#end
 #end
 #end
 					</tr>
@@ -39,11 +42,14 @@
 		</div>
 	</div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular-resource.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-resource.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.min.js"></script>
+	<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
 
 	<script type="text/javascript">
-		function ListController($scope, $http) {
+		angular.module('page', ['ngAnimate', 'ui.bootstrap']);
+		angular.module('page').controller('ListController', function ($scope, $http) {
 			
 			var url = '${serviceFileName}';
 
@@ -51,7 +57,9 @@
 			.success(function(data) {
 				$scope.data = data;
 			});
-		}
+			$scope.formats = ['yyyy/MM/dd', 'dd-MMMM-yyyy', 'dd.MM.yyyy', 'shortDate'];
+  			$scope.format = $scope.formats[0];
+		});
 	</script>
 </body>
 </html>
