--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/src/org/eclipse/dirigible/ide/template/ui/html/templates/angular/new_or_edit/ui-for-new-or-edit-entity.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/src/org/eclipse/dirigible/ide/template/ui/html/templates/angular/new_or_edit/ui-for-new-or-edit-entity.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="page">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,148 +11,146 @@
 
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular.min.js"></script>
-<script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular-resource.min.js"></script>
+
 </head>
 <body>
 	<div id="wrap" ng-controller="NewOrEditController">
 		<div class="container well">
-            <div ng-show="urlParameter">
+            <div>
             	<div class="alert alert-danger" ng-show="errorMessage">
                     <strong>Oh snap!</strong> {{errorMessage}}
                 </div>
                 <div class="alert alert-success" ng-show="successfullyUpdated">
                     <strong>Well done!</strong> Entity successfully updated!
                 </div>
-                <div ng-show="exist">
-#foreach ($tableColumn in $tableColumns) 
+                <div>
+#foreach ($tableColumn in $tableColumns)
+					<label>${tableColumn.getLabel()}</label> 
 #if ($tableColumn.isKey())
-                    <label>${tableColumn.getLabel()}</label>
                     <input type="text" class="form-control" ng-model="entity.${tableColumn.getName()}" readonly>
-                    <br>
 #else
-                    <label>${tableColumn.getLabel()}</label>
-                    <input type="text" class="form-control" ng-model="entity.${tableColumn.getName()}">
-                    <br>
-#end 
+#if ($tableColumn.getWidgetType() == "date")
+					<p class="input-group">
+		            	<input type="text" ng-model="entity.${tableColumn.getName()}" class="form-control ng-pristine ng-valid ng-isolate-scope ng-valid-required ng-touched" 
+		               		uib-datepicker-popup="" is-open="${tableColumn.getName()}Status.opened" 
+		               		datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" 
+		               		required="required" style="">
+				        <span class="input-group-btn">
+				        	<button type="button" class="btn btn-default" ng-click="${tableColumn.getName()}Open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+				        </span>
+		           	</p>
+#elseif ($tableColumn.getWidgetType() == "textarea")
+					<textarea class="form-control" ng-model="entity.${tableColumn.getName()}" cols="50" rows="5"></textarea>
+#else
+					<input type="text" class="form-control" ng-model="entity.${tableColumn.getName()}">
+#end
+#end
+					<br> 
 #end                      
                     <div class="btn-group">
-                        <button type="button" class="btn btn-primary btn-sm" ng-click="updateEntity()">Update</button>
+                        <button type="button" class="btn btn-primary btn-sm" ng-click="saveEntity()" ng-show="!exist">Save</button>
+                        <button type="button" class="btn btn-primary btn-sm" ng-click="updateEntity()" ng-show="exist">Update</button>
                         <button type="button" class="btn btn-default btn-sm" ng-click="cancelUpdate()">Cancel</button>
                     </div>
                 </div>
-                
-                <div ng-hide="exist">
-                    <div class="alert alert-warning">
-                        <strong>Warning!</strong>
-                        Entity with 
-#foreach ($tableColumn in $tableColumns) 
-#if ($tableColumn.isKey())
-						${tableColumn.getName()}
-#end
-#end
-                        = '{{urlParameter}}' does not exists!
-                        You can create it.
-                    </div>
-#foreach ($tableColumn in $tableColumns) 
-#if ($tableColumn.isKey())
-                    <label>${tableColumn.getLabel()}</label>
-                    <input type="text" class="form-control" value="Auto Generated" readonly>
-                    <br>
-#else
-                    <label>${tableColumn.getLabel()}</label>
-                    <input type="text" class="form-control" ng-model="entity.${tableColumn.getName()}">
-                    <br>
-#end 
-#end                    
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-primary btn-sm" ng-click="saveEntity()">Save</button>
-                        <button type="button" class="btn btn-default btn-sm" ng-click="cancelSave()">Cancel</button>
-                    </div>
-                </div>
-                
-            </div>
-            <div ng-hide="urlParameter">
-                <div class="alert alert-danger">
-            		<strong>Oh snap!</strong> Missing or invalid parameter! Valid parameter is <strong>'{{ primaryKey }}'</strong>
-                </div>
-            </div>
+
         </div>
     </div>
 
-    <script type="text/javascript">
-	function getURLParameter(name) { 
-		return decodeURIComponent((
-			new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)
-			|| [,""])[1].replace(/\+/g, '%20'))|| null; 
-        }
-        
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-resource.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.min.js"></script>
+	<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
 
-	function NewOrEditController($scope, $http) {
-		var url = '${serviceFileName}';
-#foreach ($tableColumn in $tableColumns) 
+	<script type="text/javascript">
+	
+		function getURLParameter(name) { 
+			return decodeURIComponent((
+				new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)
+				|| [,""])[1].replace(/\+/g, '%20'))|| null; 
+	    }
+	
+		angular.module('page', ['ngAnimate', 'ui.bootstrap']);
+		angular.module('page').controller('NewOrEditController', function ($scope, $http) {
+			var url = '${serviceFileName}';
+#foreach ($tableColumn in $tableColumns)
 #if ($tableColumn.isKey())
-  		$scope.primaryKey = '${tableColumn.getName()}';
-#end 
-#end                    
-		$scope.urlParameter = getURLParameter($scope.primaryKey);
-        $scope.exist = true;
-        $scope.errorMessage = null;
-        $scope.successfullyUpdated = false;
-                    
-        if($scope.urlParameter){
-        	var getUrl = url + '?' + $scope.primaryKey + '=' + $scope.urlParameter;
-
-        	$http.get(getUrl)
-        	.success(function(response){
-            	$scope.entity=response;    
-			}).error(function(response){
-            	$scope.exist = false;
-			});
-		}
-                    
-        $scope.saveEntity = function(){
-        	$http.post(url ,$scope.entity)
-        	.success(function(response){
-            	var documentURL = document.URL.toString();
-				documentURL = documentURL.substring(0, documentURL.lastIndexOf('=')+1);
-            	documentURL+=parseInt(response);
-                window.location = documentURL;
-                $scope.errorMessage = null;
-			}).error(function(response){
-            	$scope.errorMessage = response.err.message;
-			});
-		}
-                    
-        $scope.updateEntity = function(){
-        	$http.put(url, $scope.entity)
-        	.success(function (response){
-        		$scope.successfullyUpdated = true;
-                $scope.errorMessage = null;
-            }).error(function(response){
-                $scope.successfullyUpdated = false;
-                $scope.errorMessage = response.data.err.message;
-            });
-		}
-                    
-        $scope.cancelSave = function(){
-            $scope.entity = {};
-		}
-
-        $scope.cancelUpdate = function(){
-        	$scope.errorMessage = null;
-        	
-        	$http.get(getUrl)
-        	.success(function(response){
-				$scope.entity=response;    
-			}).error(function(response){
-            	$scope.exist = false;
-			});
-		}
-                    
-	}
+	  		$scope.primaryKey = '${tableColumn.getName()}';
+#end
+#end
+			$scope.urlParameter = getURLParameter($scope.primaryKey);
+	        $scope.exist = $scope.urlParameter !== null;
+	        $scope.errorMessage = null;
+	        $scope.successfullyUpdated = false;
+	                    
+	        if($scope.urlParameter){
+	        	var getUrl = url + '?' + $scope.primaryKey + '=' + $scope.urlParameter;
+	
+	        	$http.get(getUrl)
+	        	.success(function(response){
+	            	$scope.entity=response;    
+				}).error(function(response){
+	            	$scope.exist = false;
+				});
+			}
+	                    
+	        $scope.saveEntity = function(){
+	        	$http.post(url ,$scope.entity)
+	        	.success(function(response){
+	            	var documentURL = document.URL.toString();
+					documentURL = documentURL.substring(0, documentURL.lastIndexOf('=')+1);
+	            	documentURL+=parseInt(response);
+	                window.location = documentURL;
+	                $scope.errorMessage = null;
+				}).error(function(response){
+	            	$scope.errorMessage = response.err.message;
+				});
+			}
+	                    
+	        $scope.updateEntity = function(){
+	        	$http.put(url, $scope.entity)
+	        	.success(function (response){
+	        		$scope.successfullyUpdated = true;
+	                $scope.errorMessage = null;
+	            }).error(function(response){
+	                $scope.successfullyUpdated = false;
+	                $scope.errorMessage = response.err.message;
+	            });
+			}
+	                    
+	        $scope.cancelSave = function(){
+	            $scope.entity = {};
+			}
+	
+	        $scope.cancelUpdate = function(){
+	        	$scope.errorMessage = null;
+	        	
+	        	$http.get(getUrl)
+	        	.success(function(response){
+					$scope.entity=response;    
+				}).error(function(response){
+	            	$scope.exist = false;
+				});
+			}
+	        
+	        $scope.dateOptions = {
+					startingDay: 1
+			};
+			$scope.formats = ['yyyy/MM/dd', 'dd-MMMM-yyyy', 'dd.MM.yyyy', 'shortDate'];
+  			$scope.format = $scope.formats[0];
+	        
+#foreach ($tableColumn in $tableColumns) 
+#if ($tableColumn.getWidgetType() == "date")
+			$scope.${tableColumn.getName()}Open = function($event) {
+				$scope.${tableColumn.getName()}Status.opened = true;
+			};
+			$scope.${tableColumn.getName()}Status = {
+				opened: false
+			};
+#end
+#end
+	                    
+		});
 	</script>
 
 </body>
