--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/workspace.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/workspace.html
@@ -36,15 +36,27 @@
 					debugger
 					
 					if (http) {
-					http({
-			        	  method: 'PUT',
-			        	  url: path,
-			        	  data: beforeSaveText
-			        	}).then(function successCallback(response) {
-			        		console.log("OK");
-			        	  }, function errorCallback(response) {
-			        		  console.log("Error saving " + path + "\n" + response);
-			        	  });
+						http({
+				        	  method: 'PUT',
+				        	  url: path,
+				        	  data: beforeSaveText
+				        	}).then(function successCallback(response) {
+				        		console.log("OK");
+				        		var publishPath = path;
+				        		publishPath = publishPath.substring(publishPath.indexOf('/') + 1);
+				        		publishPath = publishPath.substring(publishPath.indexOf('/') + 1);
+				        		publishPath = "/publish/" + publishPath;
+				        		http({
+						        	  method: 'POST',
+						        	  url: publishPath
+						        	}).then(function successCallback(response) {
+						        		console.log("OK");
+						        	  }, function errorCallback(response) {
+						        		  console.log("Error publishing " + publishPath + "\n" + response);
+						        	  });
+				        	  }, function errorCallback(response) {
+				        		  console.log("Error saving " + path + "\n" + response);
+				        	  });
 					}
 					
 				},
